# br_cpp

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  a_star.cpp  brezenhem.cpp  brezenhem.h  main  main.cpp
.cache/clangd/index/: a_star.cpp.A2021C93141402CC.idx  a_star.h.8534AC63D4CD7412.idx  brezenhem.cpp.1FEDAEA3F6BF2B9C.idx  brezenhem.h.F7D644AB54477C9F.idx  capture.cpp.7734C665C4980480.idx  capture.h.E6FF73858F964CEE.idx  frames.cpp.1940510DD6CA411A.idx  frames.h.84E28B7DEA9660D9.idx  jpeg_work.cpp.F4051BDE43A4EC26.idx  jpeg_work.h.B0334ACFE3949F13.idx  net.cpp.F1AE231059DA261E.idx  net.h.B86B0A3C972CDD26.idx  reciv_frame.cpp.7E8F09B410D21191.idx  search_path.cpp.88A13D3930988ED6.idx  send_frame.cpp.477B3F339EB284E4.idx  tcp_client.cpp.DFF1966D80276C34.idx  tcp_server.cpp.3E4DD57E61713E4C.idx
ardu_tcp/: ardu_tcp.ino
br_cpp.xcodeproj/: project.pbxproj
camera/: capture.cpp  capture.h  frames.cpp  frames.h  jpeg_work.cpp
include/: a_star.h  jpeg_work.h  net.h  settings_socket.h  topic_server.h
logick/: a_star.cpp  brezenhem.cpp  search_path.cpp
network/: broker.cpp  net.cpp  net.h  pub.cpp  pub_frame.cpp  reciv_frame.cpp  send_frame.cpp  settings_socket.cpp  signals.cpp  sub.cpp  tcp_client.cpp  tcp_server.cpp  time.cpp  udp_client.cpp  udp_server.cpp
network/core/: br_time.h  broker.cpp  config.hpp  net.cpp  net.h  optimization.cpp  optimization.h  send_recv.cpp  send_recv.h  signals.hpp
py_code/: py_tcp_server.py
src/: frame_find.cpp
